--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,12 @@ mypy = "^1.3"
 faker = "^18.10"
 hypothesis = "^6.76"
 
+[tool.poetry.group.cli-dev]
+optional = true
+
+[tool.poetry.group.cli-dev.dependencies]
+polyconf-cli = {path = "../polyconf-cli", develop = true}
+
 [tool.poetry.group.plugin-dev]
 optional = true
 
