--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,9 @@ pytest-cov = "^4.1"
 mypy = "^1.3"
 faker = "^18.10"
 hypothesis = "^6.76"
+black = "^23.3.0"
+isort = "^5.12.0"
+pylint = "^2.17.4"
 
 [tool.poetry.group.cli-dev]
 optional = true
