--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,32 +23,45 @@ include = [{ path = "tests", format = "sdist" }]
 python = "^3.11"
 
 [tool.poetry.group.dev.dependencies]
+
+[tool.poetry.group.test.dependencies]
 coverage = "^7.2"
 pytest = "^7.3"
 pytest-cov = "^4.1"
-mypy = "^1.3"
 faker = "^18.10"
 hypothesis = "^6.76"
+
+[tool.poetry.group.lint.dependencies]
+mypy = "^1.3"
 black = "^23.3.0"
 isort = "^5.12.0"
 pylint = "^2.17.4"
 
-[tool.poetry.group.cli-dev]
+[tool.poetry.group.docs]
 optional = true
 
-[tool.poetry.group.cli-dev.dependencies]
-polyconf-cli = {path = "../polyconf-cli", develop = true}
+[tool.poetry.group.docs.dependencies]
 
-[tool.poetry.group.plugin-dev]
-optional = true
 
-[tool.poetry.group.plugin-dev.dependencies]
-polyconf-plugins-direnv = {path = "../polyconf-plugins-direnv", develop = true}
-polyconf-plugins-env = {path = "../polyconf-plugins-env", develop = true}
-polyconf-plugins-file = {path = "../polyconf-plugins-file", develop = true}
-polyconf-plugins-http = {path = "../polyconf-plugins-http", develop = true}
-polyconf-plugins-sql = {path = "../polyconf-plugins-sql", develop = true}
-polyconf-plugins-xdg = {path = "../polyconf-plugins-xdg", develop = true}
+# [tool.poetry.group.cli-dev]
+# optional = true
+#
+# [tool.poetry.group.cli-dev.dependencies]
+# polyconf-cli = {path = "../polyconf-cli", develop = true}
+#
+# [tool.poetry.group.plugin-dev]
+# optional = true
+#
+# [tool.poetry.group.plugin-dev.dependencies]
+# polyconf-plugins-direnv = {path = "../polyconf-plugins-direnv", develop = true}
+# polyconf-plugins-env = {path = "../polyconf-plugins-env", develop = true}
+# polyconf-plugins-file = {path = "../polyconf-plugins-file", develop = true}
+# polyconf-plugins-http = {path = "../polyconf-plugins-http", develop = true}
+# polyconf-plugins-sql = {path = "../polyconf-plugins-sql", develop = true}
+# polyconf-plugins-xdg = {path = "../polyconf-plugins-xdg", develop = true}
+sphinx = "^7.0.1"
+myst-parser = "^2.0.0"
+furo = "^2023.5.20"
 
 [tool.black]
 line-length = 120
